fix(header): Fixed links visibility

--- a/app/src/ui/components/header/header.module.scss
+++ b/app/src/ui/components/header/header.module.scss
@@ -16,12 +16,7 @@
 
   .links {
     display: flex;
-    flex-direction: column;
     align-items: center;
-
-    @include tablet {
-      flex-direction: row;
-    }
 
     .link {
       &:not(:last-of-type) {
